--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,21 +88,25 @@ form textarea {
 
 .term { font-weight: 600; }
 
-.sucess-results {
-  font-size: 18px;
-  margin: 10px 0;
-}
-
-.unsucessfull-results {
+.results {
   margin-top: 20px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
-.unsucessfull-results pre {
+.results pre {
   border: 2px solid #000;
   padding: 0 15px 16px 15px;
   line-height: 20px;
   font-size: 15px;
   background: #f1f1f1;
+  max-height: 55vh;
+  overflow: auto;
+  max-width: 85%;
+  width: 100%;
+}
+
+.results > div {
+  font-size: 18px;
+  width: 32%;
 }
