--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,9 +57,9 @@ form textarea {
   color: #8f867e;
 }
 
-.submit-area { margin: 10px 0; }
+.submit-area { margin: 30px 0 10px 0; }
 
-.submit-area input {
+.submit-area .btn-submit {
   width: auto;
   border: 2px solid transparent;
   background: #8f867e;
@@ -69,11 +69,15 @@ form textarea {
   font-size: 16px;
   text-transform: uppercase;
   font-family: "Circular Std" ,sans-serif;
+  text-decoration: none;
 }
 
 .submit-area input:active,
 .submit-area input:hover,
-.submit-area input:focus {
+.submit-area input:focus ,
+.submit-area .btn-submit:active,
+.submit-area .btn-submit:hover,
+.submit-area .btn-submit:focus {
   width: auto;
   border: 2px solid #000;
   background: #000;
@@ -109,4 +113,36 @@ form textarea {
 .results > div {
   font-size: 18px;
   width: 32%;
+}
+
+.modal-window {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.25);
+  top: 130px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.modal-window:target {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-window > div {
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  padding: 2em;
+  background: #ffffff;
+  text-align: center;
+  height: 200px;
 }
