--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ form textarea {
   justify-content: space-between;
 }
 
-.results pre {
+.results ul {
   border: 2px solid #000;
   padding: 0 15px 16px 15px;
   line-height: 20px;
@@ -108,6 +108,10 @@ form textarea {
   overflow: auto;
   max-width: 85%;
   width: 100%;
+}
+
+.results ul li {
+  list-style-type: none;
 }
 
 .results > div {
