--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ body {
 .desc,
 form { text-align: center; }
 
+.title a {
+  text-decoration: none;
+  color: #fff;
+}
+
 header {
   background-color: #000;
   color: #fff;
